@@ -34,12 +34,12 @@ CWD=`pwd`
 
 # do PubMed Central first
 cd pmc
-${PYTHON} ./download_pmc_papers.py $1 $2 "$3" | tee -a ${LOG}
+${PYTHON} ./download_pmc_papers.py $1 $2 "$3" 2>&1 | tee -a ${LOG}
 cd ${CWD}
 
 # then do Elsevier's SciDirect
 cd elsevier
-${PYTHON} ./download_elsevier_papers.py $1 $2 "$3" | tee -a ${LOG}
+${PYTHON} ./download_elsevier_papers.py $1 $2 "$3" 2>&1 | tee -a ${LOG}
 cd ${CWD}
 
 date | tee -a ${LOG}
