@@ -1,3 +1,9 @@
+TAG: pdfdownload-6-0-18-3
+DATE: 2/08/2022
+STAFF: jak
+CHANGES: PMC download now catches and logs http errors
+WTS2-812
+
 TAG: pdfdownload-6-0-18-2
 DATE: 2/08/2022
 STAFF: jak
